Fix issue with tab/window titles not refreshing for the non-active session.

BUG: 125796

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=541914